--- a/Form.html
+++ b/Form.html
@@ -35,9 +35,10 @@
                 </div>
             </div>
         </nav>
-        <div class="container pb-104">
-            <div class="mt-173 pos-rela">
-                <p class="font-sed">Sed tortor in quisque morbi scelerisque etiam eu.</p>
+        <div class="container pb-104 pt-173">
+            <div class="pos-rela dis-infl">
+                <span class="font-sed mw-900 text-align-center text-align-lg-left">Sed tortor in quisque morbi
+                    scelerisque etiam eu.</span>
                 <span class="pos-a">
                     <svg width="472" height="8" viewBox="0 0 472 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect x="2.49707" width="469.503" height="8" fill="#01C8FF" />
@@ -45,15 +46,16 @@
                     </svg>
                 </span>
             </div>
-            <div class="mt-18">
-                <p class="font-ll mw-765">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc efficitur urna
+            <div class="mt-18 d-flex justify-content-center justify-content-lg-start">
+                <p class="font-ll mw-765 text-align-center text-align-lg-left">Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Nunc efficitur urna
                     in
                     dictum suscipit.
                     Suspendisse maximus
                     ipsum sem. Donec ut justo et leo congue lacinia vitae nec arcu. Nunc elit elit, malesuada id
                     suscipit cursus,</p>
             </div>
-            <div class="pt-30">
+            <div class="pt-30 d-flex justify-content-center justify-content-lg-start align-item-center">
                 <button class="font-get btn-get">Get Started</button>
                 <span><a href="" class="font-lea">Learn more</a></span>
             </div>
@@ -167,8 +169,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row justify-content-center">
-                        <div class="col-lg-6 col-md-6 col-12 mt-50 d-flex justify-content-center">
+                    <div class="row justify-content-center justify-content-lg-start">
+                        <div
+                            class="col-lg-6 col-md-6 col-12 mt-50 d-flex justify-content-center justify-content-lg-start">
                             <div class="bor-col pos-relative mwh">
                                 <p class="font-sh text-align-center mt-45">Sharing</p>
                                 <div class="d-flex justify-content-center">
@@ -189,7 +192,8 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-12 pos-rel mt-50 d-flex justify-content-center">
+                        <div
+                            class="col-lg-6 col-md-6 col-12 pos-rel mt-50 d-flex justify-content-center justify-content-lg-start">
                             <div class="bor-col mwh pos-rel">
                                 <p class="font-sh text-align-center mt-45">Info</p>
                                 <div class="d-flex justify-content-center">
