--- a/Form.html
+++ b/Form.html
@@ -36,14 +36,12 @@
             </div>
         </nav>
         <div class="container pb-104 pt-173">
-            <div class="pos-rela dis-infl">
-                <span class="font-sed mw-900 text-align-center text-align-lg-left">Sed tortor in quisque morbi
+            <div class="pos-rela dis-infl d-flex">
+                <span class="font-sed mw-900 text-align-center text-align-lg-left fs-lg-64 fs-md-50">Sed tortor in
+                    quisque morbi
                     scelerisque etiam eu.</span>
-                <span class="pos-a">
-                    <svg width="472" height="8" viewBox="0 0 472 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect x="2.49707" width="469.503" height="8" fill="#01C8FF" />
-                        <rect width="414.561" height="8" fill="#2C49FE" />
-                    </svg>
+                <span class="pos-a dis-lg-flex dis-none right-md-9 right-lg-0 right-sm-10 dis-sm-flex">
+                    <img src="./assets/images/svg-img.png" alt="svg-img" class="w-lg-100 w-md-80">
                 </span>
             </div>
             <div class="mt-18 d-flex justify-content-center justify-content-lg-start">
@@ -57,10 +55,10 @@
             </div>
             <div class="pt-30 d-flex justify-content-center justify-content-lg-start align-item-center">
                 <button class="font-get btn-get">Get Started</button>
-                <span><a href="" class="font-lea">Learn more</a></span>
+                <span><a href="" class="font-lea ml-25">Learn more</a></span>
             </div>
             <div class="row mt-173">
-                <div class="col-12 col-md-9">
+                <div class="col-12 col-lg-9">
                     <div class="cardbox row-blue">
                         <div class="row w-100 justify-content-center align-item-center">
                             <div class="col-lg-3 col-md-6 col-12 d-flex align-item-center p-rel justify-content-center">
@@ -121,7 +119,7 @@
                                     <p class="font-search">09/23/2021</p>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6 col-12 justify-content-center align-item-center">
+                            <div class="col-lg-3 col-md-6 col-12 justify-content-center align-item-center d-flex">
                                 <button class="font-go btn-go">GO CHECK</button>
                             </div>
                         </div>
