some changes in html and css

--- a/Form.html
+++ b/Form.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="bg-img-head">
-        <nav>
+        <nav class="pt-13 pos-fix">
             <div class="container">
                 <div class=" d-flex align-item-center justify-content-between">
                     <div class="d-flex">
@@ -37,7 +37,8 @@
         </nav>
         <div class="container pb-104 pt-173">
             <div class="pos-rela dis-infl d-flex">
-                <span class="font-sed mw-900 text-align-center text-align-lg-left fs-lg-64 fs-md-50">Sed tortor in
+                <span class="font-sed mw-900 text-align-center text-align-lg-left fs-lg-64 fs-md-50">Sed
+                    tortor in
                     quisque morbi
                     scelerisque etiam eu.</span>
                 <span class="pos-a dis-lg-flex dis-none right-md-9 right-lg-0 right-sm-10 dis-sm-flex">
@@ -45,7 +46,8 @@
                 </span>
             </div>
             <div class="mt-18 d-flex justify-content-center justify-content-lg-start">
-                <p class="font-ll mw-765 text-align-center text-align-lg-left">Lorem ipsum dolor sit amet, consectetur
+                <p class="font-ll mw-765 text-align-center text-align-lg-left">Lorem ipsum dolor sit
+                    amet, consectetur
                     adipiscing elit. Nunc efficitur urna
                     in
                     dictum suscipit.
@@ -61,7 +63,8 @@
                 <div class="col-12 col-lg-9">
                     <div class="cardbox row-blue">
                         <div class="row w-100 justify-content-center align-item-center">
-                            <div class="col-lg-3 col-md-6 col-12 d-flex align-item-center p-rel justify-content-center">
+                            <div
+                                class="col-lg-3 col-md-6 col-12 d-flex align-item-center p-rel justify-content-center pb-13 pb-lg-0">
                                 <span class="">
                                     <svg width="31" height="31" viewBox="0 0 31 31" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -80,14 +83,16 @@
                                     <p class="font-search">Search by city</p>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6 col-12 d-flex p-rel align-item-center justify-content-center">
+                            <div
+                                class="col-lg-3 col-md-6 col-12 d-flex p-rel align-item-center justify-content-center pb-13 pb-lg-0">
                                 <img src="./assets/images/telephone.png" alt="telephone" class="">
                                 <div class="ml-17">
                                     <p class="font-loc">Date</p>
                                     <p class="font-search">09/23/2021</p>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6 col-12 d-flex p-rel align-item-center justify-content-center">
+                            <div
+                                class="col-lg-3 col-md-6 col-12 d-flex p-rel align-item-center justify-content-center pb-13 pb-md-0">
                                 <span>
                                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -131,7 +136,7 @@
     <section>
         <div class="container">
             <div class="row pb-73 pt-137">
-                <div class="col-xl-6 col-12 d-flex align-item-center pos-r">
+                <div class="col-lg-6 col-12 d-flex align-item-center pos-r">
                     <img src="./assets/images/video-img2.png" alt="video-img2" class="w-100">
                     <span class="pos-ab transform_translate">
                         <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -140,7 +145,7 @@
                         </svg>
                     </span>
                 </div>
-                <div class="col-xl-6 col-12">
+                <div class="col-lg-6 col-12">
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <div>
                             <span class="d-flex justify-content-center justify-content-xl-start">
@@ -438,7 +443,7 @@
     <footer class="bg-black">
         <div class="container">
             <div class="row pt-90 pb-90 justify-content-center justify-content-xl-start">
-                <div class="col-xl-5 col-12">
+                <div class="col-lg-5 col-12">
                     <div class="d-flex align-item-center">
                         <span>
                             <img src="./assets/images/footer-img-globe.png" alt="globe">
@@ -491,49 +496,47 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-xl-7 col-12">
-                    <div class="row justify-content-center pt-30 align-item-center">
-                        <ul
-                            class="col-lg-3 col-md-6 col-sm-6 col-12 text-align-center text-align-lg-left mt-15 mt-lg-0">
-                            <li class="font-ser mb-11">SERVICES</li>
-                            <li><a href="" class="font-ab mb-12">About</a></li>
-                            <li><a href="" class="font-ab mb-12 ">News</a></li>
-                            <li><a href="" class="font-ab mb-12">ullamcorper</a></li>
-                            <li><a href="" class="font-ab">Contact</a></li>
-                        </ul>
-                        <ul
-                            class="col-lg-3 col-md-6 col-sm-6 col-12 text-align-center text-align-lg-left mt-15 mt-lg-0">
-                            <li class="font-ser mb-11">EVENTS</li>
-                            <li><a href="" class="font-ab mb-12">ullamcorper</a></li>
-                            <li><a href="" class="font-ab mb-12">ullamcorper</a></li>
-                            <li><a href="" class="font-ab mb-12">ullamcorper</a></li>
+
+                <div class="col-lg-7 col-12 pt-50">
+                    <div class="row">
+                        <ul class="col-lg-3 col-md-6 col-sm-6 col-12">
+                            <li class="font-ser">SERVICES</li>
+                            <li><a href="" class="font-ab">About</a></li>
+                            <li><a href="" class="font-ab">News</a></li>
                             <li><a href="" class="font-ab">ullamcorper</a></li>
+                            <li><a href="" class="font-ab">Contact</a></li>
+
                         </ul>
-                        <ul class="col-lg-6 col-12 d-flex flex-dir justify-content-center">
-                            <li class="font-ser mb-11 mt-15 mt-xl-0">GALLERY</li>
-                            <ul class="row">
-                                <li class="col-lg-4 col-md-6 col-sm-6 col-12 pb-13"><a href=""
-                                        class="w-100 display-inline-block"><img src="./assets/images/foot-img-1.png"
-                                            alt="foot-img-1"></a>
+                        <ul class="col-lg-3 col-md-6 col-sm-6 col-12">
+                            <li class="font-ser">EVENTS</li>
+                            <li><a href="" class="font-ab">ullamcorper</a></li>
+                            <li><a href="" class="font-ab">ullamcorper</a></li>
+                            <li><a href="" class="font-ab">ullamcorper</a></li>
+                            <li><a href="" class="font-ab">ullamcorper</a></li>
+
+                        </ul>
+                        <ul class="col-lg-6 col-12">
+                            <ul>
+                                <li class="font-ser">GALLERY</li>
+                            </ul>
+                            <ul class="row ml-3">
+                                <li><a href=""
+                                        class="col-lg-4 col-md-6 col-sm-6 col-12  display-inline-block h-100 mr-18 mb-13"><img
+                                            src="./assets/images/foot-img-1.png" alt="foot-img-1"></a></li>
+                                <li><a href=""
+                                        class="col-lg-4 col-md-6 col-sm-6 col-12 display-inline-block h-100 mr-18 mb-13"><img
+                                            src="./assets/images/foot-img-2.png" alt="foot-img-2"></a></li>
+                                <li><a href=""
+                                        class="col-lg-4 col-md-6 col-sm-6 col-12 display-inline-block h-100 mr-18 mb-13"><img
+                                            src="./assets/images/foot-img-3.png" alt="foot-img-3"></a>
+                                <li><a href=""
+                                        class="col-lg-4 col-md-6 col-sm-6 col-12 display-inline-block h-100 mr-18 mb-13"><img
+                                            src="./assets/images/foot-img-4.png" alt="foot-img-4"></a></li>
+                                <li><a href=""
+                                        class="col-lg-4 col-md-6 col-sm-6 col-12 display-inline-block h-100 mr-18 mb-13"><img
+                                            src="./assets/images/foot-img-5.png" alt="foot-img-5"></a></li>
+                                <li><a href="" class="col-lg-4 col-md-6 col-sm-6 col-12 show-more">Show More</a></li>
                                 </li>
-                                <li class="col-lg-4 col-md-6 col-sm-6 col-12 pb-13"><a href=""
-                                        class="w-100 display-inline-block"><img src="./assets/images/foot-img-2.png"
-                                            alt="foot-img-2"></a>
-                                </li>
-                                <li class="col-lg-4 col-md-6 col-sm-6 col-12 pb-13"><a href=""
-                                        class="w-100 display-inline-block"><img src="./assets/images/foot-img-3.png"
-                                            alt="foot-img-3"></a>
-                                </li>
-                                <li class="col-lg-4 col-md-6 col-sm-6 col-12"><a href=""
-                                        class="w-100 display-inline-block"><img src="./assets/images/foot-img-4.png"
-                                            alt="foot-img-4"></a>
-                                </li>
-                                <li class="col-lg-4 col-md-6 col-sm-6 col-12"><a href=""
-                                        class="w-100 display-inline-block"><img src="./assets/images/foot-img-5.png"
-                                            alt="foot-img-5"></a>
-                                </li>
-                                <li><a href="" class="col-lg-4 col-md-6 col-sm-6 col-12 show-more">Show
-                                        More</a></li>
                             </ul>
                         </ul>
                     </div>
