--- a/Form.html
+++ b/Form.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="bg-img-head">
-        <nav class="pt-13 pos-fix">
+        <nav class="pt-13 pos-fix ">
             <div class="container">
                 <div class=" d-flex align-item-center justify-content-between">
                     <div class="d-flex">
@@ -175,7 +175,7 @@
                     </div>
                     <div class="row justify-content-center justify-content-xl-start">
                         <div
-                            class=" col-lg-6 col-md-6 col-12 mt-50 d-flex justify-content-center justify-content-xl-start">
+                            class="col-lg-6 col-md-6 col-12 mt-50 d-flex justify-content-center justify-content-xl-start">
                             <div class="bor-col pos-relative mwh">
                                 <p class="font-sh text-align-center mt-45">Sharing</p>
                                 <div class="d-flex justify-content-center">
@@ -218,44 +218,45 @@
                                 </span>
                             </div>
                         </div>
-                    </div>
-                    <div class="d-flex justify-content-center mt-50">
-                        <div class="box pos-relat">
-                            <p class="font-sh text-align-center mt-45">Help</p>
-                            <div class="d-flex justify-content-center">
-                                <p class="font-lore mb-17 mw-220">Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elit.
-                                    Nunc
-                                    efficitur
-                                    urna in</p>
+                        <div class="col-12 d-flex justify-content-center mt-50">
+                            <div class="box pos-relat mwh">
+                                <p class="font-sh text-align-center mt-45">Help</p>
+                                <div class="d-flex justify-content-center">
+                                    <p class="font-lore mb-17 mw-220">Lorem ipsum dolor sit amet, consectetur adipiscing
+                                        elit.
+                                        Nunc
+                                        efficitur
+                                        urna in</p>
+                                </div>
+                                <span class="pos-abso circle">
+                                    <svg width="37" height="37" viewBox="0 0 37 37" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_2_7249)">
+                                            <path
+                                                d="M30.6455 11.875H24.0205C23.1422 11.8759 22.3002 12.2252 21.6792 12.8462C21.0582 13.4672 20.7089 14.3092 20.708 15.1875V21.8125C20.7086 22.398 20.9414 22.9594 21.3555 23.3734C21.7695 23.7874 22.3308 24.0202 22.9163 24.0208V31.75C22.9169 32.3355 23.1498 32.8969 23.5638 33.3109C23.9778 33.7249 24.5392 33.9578 25.1247 33.9583H29.5413C30.1268 33.9578 30.6882 33.7249 31.1022 33.3109C31.5162 32.8969 31.7491 32.3355 31.7497 31.75V24.0208C32.3352 24.0202 32.8965 23.7874 33.3106 23.3734C33.7246 22.9594 33.9574 22.398 33.958 21.8125V15.1875C33.9571 14.3092 33.6079 13.4672 32.9868 12.8462C32.3658 12.2252 31.5238 11.8759 30.6455 11.875ZM31.7497 21.8125H29.5413V31.75H25.1247V21.8125H22.9163V15.1875C22.9163 14.8947 23.0327 14.6138 23.2397 14.4067C23.4468 14.1997 23.7277 14.0833 24.0205 14.0833H30.6455C30.9384 14.0833 31.2192 14.1997 31.4263 14.4067C31.6333 14.6138 31.7497 14.8947 31.7497 15.1875V21.8125Z"
+                                                fill="#2C49FE" />
+                                            <path
+                                                d="M22.916 6.35417C22.916 5.48063 23.175 4.62672 23.6604 3.9004C24.1457 3.17408 24.8355 2.60799 25.6425 2.2737C26.4495 1.93941 27.3376 1.85195 28.1943 2.02237C29.0511 2.19279 29.8381 2.61343 30.4557 3.23111C31.0734 3.8488 31.4941 4.63577 31.6645 5.49252C31.8349 6.34927 31.7474 7.23731 31.4132 8.04435C31.0789 8.85139 30.5128 9.54118 29.7865 10.0265C29.0601 10.5118 28.2062 10.7708 27.3327 10.7708C26.1617 10.7697 25.039 10.304 24.2109 9.47593C23.3829 8.6479 22.9172 7.52518 22.916 6.35417ZM25.1243 6.35417C25.1243 6.79094 25.2539 7.21789 25.4965 7.58105C25.7392 7.94421 26.0841 8.22726 26.4876 8.3944C26.8911 8.56155 27.3351 8.60528 27.7635 8.52007C28.1919 8.43486 28.5854 8.22454 28.8942 7.9157C29.2031 7.60686 29.4134 7.21337 29.4986 6.78499C29.5838 6.35662 29.5401 5.9126 29.3729 5.50908C29.2058 5.10556 28.9227 4.76066 28.5596 4.51801C28.1964 4.27535 27.7694 4.14584 27.3327 4.14584C26.7472 4.14642 26.1858 4.37927 25.7718 4.79329C25.3578 5.2073 25.1249 5.76866 25.1243 6.35417Z"
+                                                fill="#2C49FE" />
+                                            <path
+                                                d="M16.2913 18.5V15.1875C16.2905 14.3092 15.9412 13.4672 15.3202 12.8462C14.6991 12.2252 13.8571 11.8759 12.9788 11.875H6.35384C5.47558 11.8759 4.63354 12.2252 4.01252 12.8462C3.39149 13.4672 3.04222 14.3092 3.04134 15.1875V18.5H0.833008V20.7083H18.4997V18.5H16.2913ZM5.24967 15.1875C5.24967 14.8947 5.36601 14.6138 5.57308 14.4067C5.78015 14.1997 6.061 14.0833 6.35384 14.0833H12.9788C13.2717 14.0833 13.5525 14.1997 13.7596 14.4067C13.9667 14.6138 14.083 14.8947 14.083 15.1875V18.5H5.24967V15.1875Z"
+                                                fill="#2C49FE" />
+                                            <path
+                                                d="M5.25 6.35417C5.25 5.48063 5.50903 4.62672 5.99434 3.9004C6.47965 3.17408 7.16944 2.60799 7.97648 2.2737C8.78352 1.93941 9.67157 1.85195 10.5283 2.02237C11.3851 2.19279 12.172 2.61343 12.7897 3.23111C13.4074 3.8488 13.8281 4.63577 13.9985 5.49252C14.1689 6.34927 14.0814 7.23731 13.7471 8.04435C13.4128 8.85139 12.8468 9.54118 12.1204 10.0265C11.3941 10.5118 10.5402 10.7708 9.66667 10.7708C8.49565 10.7697 7.37294 10.304 6.5449 9.47593C5.71687 8.6479 5.25117 7.52518 5.25 6.35417ZM7.45833 6.35417C7.45833 6.79094 7.58785 7.21789 7.8305 7.58105C8.07316 7.94421 8.41805 8.22726 8.82157 8.3944C9.22509 8.56155 9.66912 8.60528 10.0975 8.52007C10.5259 8.43486 10.9194 8.22454 11.2282 7.9157C11.537 7.60686 11.7474 7.21337 11.8326 6.78499C11.9178 6.35662 11.874 5.9126 11.7069 5.50908C11.5398 5.10556 11.2567 4.76066 10.8936 4.51801C10.5304 4.27535 10.1034 4.14584 9.66667 4.14584C9.08116 4.14642 8.5198 4.37927 8.10579 4.79329C7.69177 5.2073 7.45892 5.76866 7.45833 6.35417Z"
+                                                fill="#2C49FE" />
+                                        </g>
+                                        <defs>
+                                            <clipPath id="clip0_2_7249">
+                                                <rect width="35.3333" height="35.3333" fill="white"
+                                                    transform="translate(0.833008 0.833496)" />
+                                            </clipPath>
+                                        </defs>
+                                    </svg>
+                                </span>
                             </div>
-                            <span class="pos-abso circle">
-                                <svg width="37" height="37" viewBox="0 0 37 37" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip0_2_7249)">
-                                        <path
-                                            d="M30.6455 11.875H24.0205C23.1422 11.8759 22.3002 12.2252 21.6792 12.8462C21.0582 13.4672 20.7089 14.3092 20.708 15.1875V21.8125C20.7086 22.398 20.9414 22.9594 21.3555 23.3734C21.7695 23.7874 22.3308 24.0202 22.9163 24.0208V31.75C22.9169 32.3355 23.1498 32.8969 23.5638 33.3109C23.9778 33.7249 24.5392 33.9578 25.1247 33.9583H29.5413C30.1268 33.9578 30.6882 33.7249 31.1022 33.3109C31.5162 32.8969 31.7491 32.3355 31.7497 31.75V24.0208C32.3352 24.0202 32.8965 23.7874 33.3106 23.3734C33.7246 22.9594 33.9574 22.398 33.958 21.8125V15.1875C33.9571 14.3092 33.6079 13.4672 32.9868 12.8462C32.3658 12.2252 31.5238 11.8759 30.6455 11.875ZM31.7497 21.8125H29.5413V31.75H25.1247V21.8125H22.9163V15.1875C22.9163 14.8947 23.0327 14.6138 23.2397 14.4067C23.4468 14.1997 23.7277 14.0833 24.0205 14.0833H30.6455C30.9384 14.0833 31.2192 14.1997 31.4263 14.4067C31.6333 14.6138 31.7497 14.8947 31.7497 15.1875V21.8125Z"
-                                            fill="#2C49FE" />
-                                        <path
-                                            d="M22.916 6.35417C22.916 5.48063 23.175 4.62672 23.6604 3.9004C24.1457 3.17408 24.8355 2.60799 25.6425 2.2737C26.4495 1.93941 27.3376 1.85195 28.1943 2.02237C29.0511 2.19279 29.8381 2.61343 30.4557 3.23111C31.0734 3.8488 31.4941 4.63577 31.6645 5.49252C31.8349 6.34927 31.7474 7.23731 31.4132 8.04435C31.0789 8.85139 30.5128 9.54118 29.7865 10.0265C29.0601 10.5118 28.2062 10.7708 27.3327 10.7708C26.1617 10.7697 25.039 10.304 24.2109 9.47593C23.3829 8.6479 22.9172 7.52518 22.916 6.35417ZM25.1243 6.35417C25.1243 6.79094 25.2539 7.21789 25.4965 7.58105C25.7392 7.94421 26.0841 8.22726 26.4876 8.3944C26.8911 8.56155 27.3351 8.60528 27.7635 8.52007C28.1919 8.43486 28.5854 8.22454 28.8942 7.9157C29.2031 7.60686 29.4134 7.21337 29.4986 6.78499C29.5838 6.35662 29.5401 5.9126 29.3729 5.50908C29.2058 5.10556 28.9227 4.76066 28.5596 4.51801C28.1964 4.27535 27.7694 4.14584 27.3327 4.14584C26.7472 4.14642 26.1858 4.37927 25.7718 4.79329C25.3578 5.2073 25.1249 5.76866 25.1243 6.35417Z"
-                                            fill="#2C49FE" />
-                                        <path
-                                            d="M16.2913 18.5V15.1875C16.2905 14.3092 15.9412 13.4672 15.3202 12.8462C14.6991 12.2252 13.8571 11.8759 12.9788 11.875H6.35384C5.47558 11.8759 4.63354 12.2252 4.01252 12.8462C3.39149 13.4672 3.04222 14.3092 3.04134 15.1875V18.5H0.833008V20.7083H18.4997V18.5H16.2913ZM5.24967 15.1875C5.24967 14.8947 5.36601 14.6138 5.57308 14.4067C5.78015 14.1997 6.061 14.0833 6.35384 14.0833H12.9788C13.2717 14.0833 13.5525 14.1997 13.7596 14.4067C13.9667 14.6138 14.083 14.8947 14.083 15.1875V18.5H5.24967V15.1875Z"
-                                            fill="#2C49FE" />
-                                        <path
-                                            d="M5.25 6.35417C5.25 5.48063 5.50903 4.62672 5.99434 3.9004C6.47965 3.17408 7.16944 2.60799 7.97648 2.2737C8.78352 1.93941 9.67157 1.85195 10.5283 2.02237C11.3851 2.19279 12.172 2.61343 12.7897 3.23111C13.4074 3.8488 13.8281 4.63577 13.9985 5.49252C14.1689 6.34927 14.0814 7.23731 13.7471 8.04435C13.4128 8.85139 12.8468 9.54118 12.1204 10.0265C11.3941 10.5118 10.5402 10.7708 9.66667 10.7708C8.49565 10.7697 7.37294 10.304 6.5449 9.47593C5.71687 8.6479 5.25117 7.52518 5.25 6.35417ZM7.45833 6.35417C7.45833 6.79094 7.58785 7.21789 7.8305 7.58105C8.07316 7.94421 8.41805 8.22726 8.82157 8.3944C9.22509 8.56155 9.66912 8.60528 10.0975 8.52007C10.5259 8.43486 10.9194 8.22454 11.2282 7.9157C11.537 7.60686 11.7474 7.21337 11.8326 6.78499C11.9178 6.35662 11.874 5.9126 11.7069 5.50908C11.5398 5.10556 11.2567 4.76066 10.8936 4.51801C10.5304 4.27535 10.1034 4.14584 9.66667 4.14584C9.08116 4.14642 8.5198 4.37927 8.10579 4.79329C7.69177 5.2073 7.45892 5.76866 7.45833 6.35417Z"
-                                            fill="#2C49FE" />
-                                    </g>
-                                    <defs>
-                                        <clipPath id="clip0_2_7249">
-                                            <rect width="35.3333" height="35.3333" fill="white"
-                                                transform="translate(0.833008 0.833496)" />
-                                        </clipPath>
-                                    </defs>
-                                </svg>
-                            </span>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -372,7 +373,17 @@
                         </div>
                         <div class="col-lg-6 col-md-6 col-12">
                             <div class="card w-100">
-                                <img src="./assets/images/mid-img-2.png" alt="" class="pxy-card w-100">
+                                <div class="pos-r">
+                                    <img src="./assets/images/mid-img-2.png" alt="" class="pxy-card w-100">
+                                    <span class="position-a">
+                                        <svg width="56" height="24" viewBox="0 0 56 24" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M55.0607 13.0607C55.6465 12.4749 55.6465 11.5251 55.0607 10.9393L45.5147 1.39339C44.9289 0.807608 43.9792 0.807608 43.3934 1.39339C42.8076 1.97918 42.8076 2.92893 43.3934 3.51472L51.8787 12L43.3934 20.4853C42.8076 21.0711 42.8076 22.0208 43.3934 22.6066C43.9792 23.1924 44.9289 23.1924 45.5147 22.6066L55.0607 13.0607ZM1.31134e-07 13.5L54 13.5L54 10.5L-1.31134e-07 10.5L1.31134e-07 13.5Z"
+                                                fill="white" />
+                                        </svg>
+                                    </span>
+                                </div>
                                 <div class="ml-25">
                                     <p class="font-09 mt-13">09/23/2021</p>
                                     <p class="font-lo">Lorem ipsum</p>
@@ -445,19 +456,22 @@
         <div class="container">
             <div class="row pt-90 pb-90">
                 <div class="col-lg-5 col-12">
-                    <div class="d-flex align-item-center">
+                    <div class="d-flex align-item-center justify-content-center justify-content-lg-start">
                         <span>
                             <img src="./assets/images/footer-img-globe.png" alt="globe">
                         </span>
                         <p class="font-e">Events<span class="font-fr">Free</span></p>
                     </div>
-                    <p class="font-l mw-346 mt-35">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                        efficitur
-                        urna in
-                        dictum suscipit.
-                        Suspendisse maximus
-                        ipsum sem. c</p>
-                    <div class="mt-25">
+                    <div class="d-flex justify-content-center justify-content-lg-start">
+                        <p class="font-l mw-346 mt-35 text-align-center text-align-lg-left">Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. Nunc
+                            efficitur
+                            urna in
+                            dictum suscipit.
+                            Suspendisse maximus
+                            ipsum sem. c</p>
+                    </div>
+                    <div class="mt-25 d-flex justify-content-center justify-content-lg-start">
                         <span class="">
                             <a href="https://www.instagram.com/">
                                 <svg width="23" height="23" viewBox="0 0 23 23" fill="none"
@@ -504,18 +518,17 @@
                         </span>
                     </div>
                 </div>
-
                 <div class="col-lg-7 col-12 pt-50">
                     <div class="row">
-                        <ul class="col-lg-3 col-md-3 col-sm-6 col-12 ">
+                        <ul class="col-lg-3 col-md-3 col-sm-6 col-12 text-align-center text-align-sm-left">
                             <li class="font-ser pb-12">SERVICES</li>
                             <li class="pb-11"><a href="" class="font-ab">About</a></li>
                             <li class="pb-11"><a href="" class="font-ab">News</a></li>
                             <li class="pb-11"><a href="" class="font-ab">ullamcorper</a></li>
                             <li class="pb-11"><a href="" class="font-ab">Contact</a></li>
-
                         </ul>
-                        <ul class="col-lg-3 col-md-3 col-sm-6 col-12 mt-15 mt-lg-0 mt-md-0 mt-sm-0">
+                        <ul
+                            class="col-lg-3 col-md-3 col-sm-6 col-12 mt-15 mt-lg-0 mt-md-0 mt-sm-0 text-align-center text-align-sm-left">
                             <li class="font-ser  pb-12">EVENTS</li>
                             <li class="pb-11"><a href="" class="font-ab">ullamcorper</a></li>
                             <li class="pb-11"><a href="" class="font-ab">ullamcorper</a></li>
@@ -528,13 +541,13 @@
                                 <li class="font-ser pb-12">GALLERY</li>
                             </ul>
                             <ul class="row ml-3">
-                                <li class="col-4 mb-13"><a href=""><img src="./assets/images/foot-img-1.png"
+                                <li class="col-4 mb-17"><a href=""><img src="./assets/images/foot-img-1.png"
                                             alt="foot-img-1" class="w-100"></a>
                                 </li>
-                                <li class="col-4 mb-13"><a href=""><img src="./assets/images/foot-img-2.png"
+                                <li class="col-4 mb-17"><a href=""><img src="./assets/images/foot-img-2.png"
                                             alt="foot-img-2" class="w-100"></a>
                                 </li>
-                                <li class="col-4 mb-13"><a href=""><img src="./assets/images/foot-img-3.png"
+                                <li class="col-4 mb-17"><a href=""><img src="./assets/images/foot-img-3.png"
                                             alt="foot-img-3" class="w-100"></a>
                                 <li class="col-4"><a href=""><img src="./assets/images/foot-img-4.png" alt="foot-img-4"
                                             class="w-100"></a>
