--- a/Form.html
+++ b/Form.html
@@ -429,20 +429,20 @@
                             ipsum sem. Donec ut justo et leo congue</p>
                     </div>
                     <p class="font-sign mb-14 text-align-center text-align-lg-left">Sign Up</p>
-                    <form action="">
+                    <form action="#">
                         <div class="d-flex mb-16 w-100">
                             <input type="text" class=" w-50 mr-16" placeholder="First Name">
                             <input type="text" class="w-50" placeholder="Last Name">
                         </div>
                         <div class="mb-16 w-100">
-                            <input type="email" id="Email Address" placeholder="Email Address">
+                            <input type="email" placeholder="Email Address">
                         </div>
                         <div class="d-flex mb-16 w-100">
                             <input type="password" class="mr-16 w-50" placeholder="Password">
                             <input type="password" class="w-50" placeholder="Confirm Password">
                         </div>
                         <div class="mb-37 w-100">
-                            <textarea name="" id="" rows="7" placeholder="About Me"></textarea>
+                            <textarea name="#" id="#" rows="7" placeholder="About Me"></textarea>
                         </div>
                         <div>
                             <button class="w-100 font-si">Sign up</button>
@@ -536,7 +536,7 @@
                             <li class="pb-11"><a href="" class="font-ab">ullamcorper</a></li>
 
                         </ul>
-                        <ul class="col-lg-6 col-md-6 col-12 mt-15 mt-lg-0 mt-md-0">
+                        <div class="col-lg-6 col-md-6 col-12 mt-15 mt-lg-0 mt-md-0">
                             <ul>
                                 <li class="font-ser pb-12">GALLERY</li>
                             </ul>
@@ -556,9 +556,8 @@
                                             class="w-100"></a>
                                 </li>
                                 <li class="col-4"><a href="" class="show-more">Show More</a></li>
-                                </li>
                             </ul>
-                        </ul>
+                        </div>
                     </div>
                 </div>
             </div>
