some changes in html and linking css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/Form.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
@@ -197,7 +197,7 @@
                             </div>
                         </div>
                         <div
-                            class=" col-lg-6 col-md-6 col-12 pos-rel mt-50 d-flex justify-content-center justify-content-xl-end">
+                            class=" col-lg-6 col-md-6 col-12 pos-rel mt-50 d-flex justify-content-center justify-content-xl-start">
                             <div class="bor-col mwh pos-rel">
                                 <p class="font-sh text-align-center mt-45">Info</p>
                                 <div class="d-flex justify-content-center">
@@ -219,7 +219,7 @@
                             </div>
                         </div>
                         <div class="col-12 d-flex justify-content-center mt-50">
-                            <div class="box pos-relat mwh">
+                            <div class="box pos-relat mwh left-lg-9">
                                 <p class="font-sh text-align-center mt-45">Help</p>
                                 <div class="d-flex justify-content-center">
                                     <p class="font-lore mb-17 mw-220">Lorem ipsum dolor sit amet, consectetur adipiscing
