removing unwanted classes and manage width of img

--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
     <section>
         <div class="container">
             <div class="row pb-90">
-                <div class="col-lg-6 col-12 mb-50 mb-lg-0">
-                    <img src="./assets/images/form-img-1.png" alt="form-img-1" class="w-100">
+                <div class="col-lg-6 col-12 mb-50 mb-lg-0 mt-40">
+                    <img src="./assets/images/form-img-1.png" alt="form-img-1" class="w-100 w-lg-80">
                 </div>
                 <div class="col-lg-6 col-12">
                     <div class="d-flex justify-content-center justify-content-lg-start">
